# ciir_agentic_search

./: .env.example  .gitignore  BUILD_JOURNAL.md  README.md  app.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
agentic_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py
app/api/: routes_export.py  routes_search.py
app/core/: config.py  logging.py
app/models/: db.py  schema.py
app/services/: brave_search.py  cell_verifier.py  deterministic_extractors.py  evidence_regimes.py  exporter.py  extractor.py  field_validator.py  gap_fill.py  llm.py  merger.py  official_site.py  planner.py  query_normalizer.py  ranker.py  requirement_parser.py  requirement_scorer.py  reranker.py  scraper.py  source_quality.py  verifier.py
app/utils/: dedupe.py  text.py  url.py
data/: agentic_search.db
docs/: BUILD_JOURNAL.md  HANDOFF_AUDIT.md  SYSTEM_DESIGN.md  eval_labeled_queries.json  eval_queries.json
scripts/: eval.py  smoke_test.py
static/: app.js  style.css
templates/: index.html
tests/: test_cell_verifier.py  test_dedupe.py  test_eval_metrics.py  test_evidence_regimes.py  test_exporter.py  test_extractor.py  test_field_validator.py  test_filtering.py  test_gap_fill.py  test_merger.py  test_official_site.py  test_planner.py  test_provider_routing.py  test_query_normalizer.py  test_ranker.py  test_requirement_ranking.py  test_requirements.py  test_reranker.py  test_source_quality.py  test_text_utils.py  test_url_utils.py  test_verifier.py
